<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/IV_appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/weather_icon" />

    <TextView
        android:id="@+id/TV_appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/IV_appLogo"
        android:text="@string/br_app_name"
        android:textAlignment="center"
        android:fontFamily="@font/lilita_one"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/TV_appMoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_appName"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/app_moto"
        android:textAlignment="center"
        android:textSize="17sp" />

</RelativeLayout>