<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:fillViewport="true"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/IV_toProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/TV_townName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/IV_toProfile"
            android:fontFamily="@font/lilita_one"
            android:letterSpacing=".06"
            android:text="@string/town_placeholder"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/TV_currentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_townName"
            android:layout_marginVertical="10dp"
            android:text="@string/date_placeholder"
            android:textAlignment="center"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>

</ScrollView>