<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp">

        <ImageView
            android:id="@+id/IV_currentWeatherVisual"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/weather_icon" />

        <TextView
            android:id="@+id/TV_currentTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/IV_currentWeatherVisual"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/lilita_one"
            android:text="@string/current_temperature_placeholder"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/TV_currentState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TV_currentTemperature"
            android:text="@string/current_state_placeholder"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textAllCaps="true" />

    </RelativeLayout>

</FrameLayout>